Add CreateRessource Component for Resource Creation
This commit introduces the CreateRessource component to the application. The new component provides a user-friendly interface for creating resources, including fields for entering the resource name, selecting a color, and choosing an associated training.

Key features added:
- Form input for resource name.
- Color picker for selecting a resource color.
- Dropdown menu for selecting an associated training.
- Styling for the new form elements to ensure a consistent and attractive user interface.

The CreateRessource component enhances the resource management capabilities of the application, offering an intuitive way for users to add new resources.

--- a/src/app/admin/components/ressource-list/ressource-list.component.html
+++ b/src/app/admin/components/ressource-list/ressource-list.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <!-- Remplacer 'app-create-training' par votre composant de création de ressource -->
-
+  <app-create-ressource
+    [displayCreateRessourceDialog]="displayCreateRessources"
+    (ressourceCreated)="onRessourceCreated($event)"
+  ></app-create-ressource>
   <div
     class="flex align-item-center border-round p-4 relative"
     style="background-color: rgb(239, 244, 255)"
