--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -46,6 +46,20 @@
                   <span class="font-medium text-sm" routerLinkActive="active-navlink">Absences</span>
                 </a>
               </li>
+            </ul>
+          </li>
+        </ul>
+
+        <div *ngIf="role === 'teacher'" class="overflow-y-auto mt-1 mr-1 ml-1">           
+          <ul class="list-none p-3 m-0">
+            <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
+                pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+                leaveActiveClass="slideup">
+                <span class="font-bold text-800 text-xs">PROFESSEUR</span>
+                <i class="pi pi-chevron-down" style="font-size: 0.8rem"></i>
+            </div>
+
+            <ul class="list-none p-0 m-0 overflow-hidden">
               <li>
                 <a pRipple
                   class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
@@ -55,47 +69,48 @@
                   <span class="font-medium text-sm">Statistiques</span>
                   <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
                 </a>
-                <ul
-                  class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
-                  <li>
-                    <a pRipple
-                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                      pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
-                      leaveActiveClass="slideup">
-                      <i class="pi pi-chart-line mr-2"></i>
-                      <span class="font-medium text-sm">Revenue</span>
-                      <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
-                    </a>
-                    <ul
-                      class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
-                      <li>
-                        <a pRipple
-                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
-                          <i class="pi pi-table mr-2"></i>
-                          <span class="font-medium text-sm">View</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a pRipple
-                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
-                          <i class="pi pi-search mr-2"></i>
-                          <span class="font-medium text-sm">Search</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a pRipple
-                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
-                      <i class="pi pi-chart-line mr-2"></i>
-                      <span class="font-medium text-sm">Expenses</span>
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
+                    <li>
+                      <a pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
+                        pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+                        leaveActiveClass="slideup">
+                        <i class="pi pi-chart-line mr-2"></i>
+                        <span class="font-medium text-sm">Revenue</span>
+                        <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
+                      </a>
+                      <ul
+                        class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
+                        <li>
+                          <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
+                            <i class="pi pi-table mr-2"></i>
+                            <span class="font-medium text-sm">View</span>
+                          </a>
+                        </li>
+                        <li>
+                          <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
+                            <i class="pi pi-search mr-2"></i>
+                            <span class="font-medium text-sm">Search</span>
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
+                        <i class="pi pi-chart-line mr-2"></i>
+                        <span class="font-medium text-sm">Expenses</span>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+          </ul>
+        </div>
+
         <div *ngIf="isAdmin">
           <ul class="list-none p-3 m-0">
             <li>
