one table for all users

--- a/src/app/admin/components/form/add-students-csv/add-students-csv.component.html
+++ b/src/app/admin/components/form/add-students-csv/add-students-csv.component.html
@@ -44,7 +44,7 @@
                 <th>Prénom</th>
                 <th>INE</th>
                 <th>NIP</th>
-                <th>Pseudo</th>
+                <th>Identifiant</th>
                 <th>Email</th>
             </tr>
         </ng-template>
