--- a/src/app/admin/components/form/add-teachers/add-teachers.component.html
+++ b/src/app/admin/components/form/add-teachers/add-teachers.component.html
@@ -1,46 +1,47 @@
-<p-button routerLink="/admin/teachers" [rounded]="true" [text]="true" severity="secondary " icon="pi pi-arrow-left"></p-button>
+<p-button routerLink="/admin/users" [rounded]="true" [text]="true" severity="secondary " icon="pi pi-arrow-left"></p-button>
 
 <!-- add-user.component.html -->
 <form  [formGroup]="teacherForm" (ngSubmit)="onSubmit()" >
     <div class="col-12 md:col-5">
         <div class="card p-fluid">
             <h2>Ajouter un Enseignant</h2>
+            <p>champs obligatoires (*)</p>
             <div class="field">
-                <label htmlfor="username">Pseudo</label>
+                <label htmlfor="username">Identifiant *</label>
                 <input pinputtext="" id="username" type="text" class="p-inputtext p-component p-element" formControlName="username">
             </div>
             <div class="p-formgrid grid">
                 <div class="field col">
-                    <label htmlfor="nom">Nom</label>
+                    <label htmlfor="nom">Nom *</label>
                     <input pinputtext="" id="nom" type="text" class="p-inputtext p-component p-element" formControlName="last_name">
                 </div>
                 <div class="field col">
-                    <label htmlfor="prenom">Prénom</label>
+                    <label htmlfor="prenom">Prénom *</label>
                     <input pinputtext="" id="prenom" type="text" class="p-inputtext p-component p-element" formControlName="first_name">
                 </div>
             </div>
             <div class="field">
-                <label htmlfor="email">Email</label>
+                <label htmlfor="email">Email *</label>
                 <input pinputtext="" id="email" type="text" class="p-inputtext p-component p-element" formControlName="email">
             </div>
-            <div class="field"><label htmlfor="mdp">Mot de passe</label>
+            <div class="field"><label htmlfor="mdp">Mot de passe *</label>
                 <p-password [feedback]="false" id="mdp" [toggleMask]="true" formControlName="password"></p-password>
             </div>
 
             <div class="p-formgrid grid">
                 <div class="field col">
-                    <label htmlfor="initial">Initial</label>
+                    <label htmlfor="initial">Initial *</label>
                     <input pinputtext="" id="initial" type="text" class="p-inputtext p-component p-element" formControlName="initial">
                 </div>
                 <div class="field col">
-                    <label htmlfor="desktop">Bureau (si aucun, ne rien entrer)</label>
+                    <label htmlfor="desktop">Bureau</label>
                     <input pinputtext="" id="desktop" type="text" class="p-inputtext p-component p-element" formControlName="desktop">
                 </div>
             </div>
 
             <div class="flex align-items-center gap-3">
                 <p-checkbox name="group1" value="true"  inputId="admin" formControlName="admin"></p-checkbox>
-                <label for="admin">Attribuer les droits administrateur</label>
+                <label for="admin">Attribuer les droits administrateurs</label>
             </div>
             <div class="field">
                 
