--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -88,7 +88,7 @@
                         pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                         leaveActiveClass="slideup">
                         <i class="pi pi-chart-line mr-2"></i>
-                        <span class="font-medium text-sm">Revenue</span>
+                        <span class="font-medium text-sm">Mes services</span>
                         <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
                       </a>
                       <ul
@@ -113,7 +113,7 @@
                       <a pRipple
                         class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
                         <i class="pi pi-chart-line mr-2"></i>
-                        <span class="font-medium text-sm">Expenses</span>
+                        <span class="font-medium text-sm">Statistiques</span>
                       </a>
                     </li>
                   </ul>
@@ -371,6 +371,60 @@
                     <i class="pi pi-desktop mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Équipements</span>
                   </a>
+                </li>
+                <li>
+                  <a pRipple
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
+                    pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+                    leaveActiveClass="slideup">
+                    <i class="pi pi-wrench mr-2"></i>
+                    <span class="font-medium text-sm">Paramètres ENT</span>
+                    <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
+                  </a>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
+                    <li>
+                      <a pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
+                        pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+                        leaveActiveClass="slideup">
+                        <i class="pi pi-cog mr-2"></i>
+                        <span class="font-medium text-sm">Général</span>
+                        <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
+                      </a>
+                      <ul
+                        class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
+                        <li>
+                          <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
+                            <i class="pi pi-table mr-2"></i>
+                            <span class="font-medium text-sm">View</span>
+                          </a>
+                        </li>
+                        <li>
+                          <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
+                            <i class="pi pi-search mr-2"></i>
+                            <span class="font-medium text-sm">Search</span>
+                          </a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
+                        <i class="pi pi-bell mr-2"></i>
+                        <span class="font-medium text-sm">Notifications</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
+                        <i class="pi pi-envelope mr-2"></i>
+                        <span class="font-medium text-sm">Serveur SMTP</span>
+                      </a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
             </li>
