--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -250,32 +250,8 @@
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
-                    <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Promotions</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
+                    <i class="pi pi-sitemap mr-2" routerLinkActive="active-navlink"></i>
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Groupes</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">TD</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-user mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">TP</span>
                   </a>
                 </li>
                 <li>
