--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -246,7 +246,7 @@
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Emploi du temps</span>
                   </a>
                 </li>
-                <li>
+                <li routerLink="/resp/groups">
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
