ajout du boolean responsable edt

--- a/src/app/admin/components/form/add-users/add-users.component.html
+++ b/src/app/admin/components/form/add-users/add-users.component.html
@@ -37,6 +37,13 @@
             <div class="field">
 
             </div>  
+            <div class="flex align-items-center gap-3">
+                <p-checkbox name="group1" value="true"  inputId="ttmanager" formControlName="ttmanager"></p-checkbox>
+                <label for="ttmanager">Est un responsable de l'emploi du temps</label>
+            </div>
+            <div class="field">
+
+            </div>  
         </div>
         <button type="submit" pButton pRipple label="Ajouter l'utilisateur" class="w-full p-3"></button>
 
