--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -16,6 +16,7 @@ dataKey="id"
             <th>Initial</th>
             <th>Bureau</th>
             <th>Admin</th>
+            <th>Responsable</th>
             <th>Modifier</th>
             <th>Supprimer</th>
         </tr>
@@ -43,6 +44,9 @@ dataKey="id"
             <th>
                 <p-columnFilter type="boolean" field="user.isAdmin"></p-columnFilter>
             </th>
+            <th>
+                <p-columnFilter type="boolean" field="user.isTTManager"></p-columnFilter>
+            </th>
             <th></th>
             <th></th>
             
@@ -62,6 +66,11 @@ dataKey="id"
                 <i class="pi"
                     [ngClass]="{ 'pi-check-circle': teacher.user.isAdmin, 'pi-times-circle': !teacher.user.isAdmin }"
                     [ngStyle]="{ 'color': teacher.user.isAdmin ? 'green' : 'red' }"></i>
+            </td>
+            <td>
+                <i class="pi"
+                    [ngClass]="{ 'pi-check-circle': teacher.user.isTTManager, 'pi-times-circle': !teacher.user.isTTManager }"
+                    [ngStyle]="{ 'color': teacher.user.isTTManager ? 'green' : 'red' }"></i>
             </td>
             <td><p-button icon="pi pi-user-edit" [rounded]="true" [text]="true" severity="info" (click) ="openModal(teacher)"  ></p-button></td>
             <td><p-button icon="pi pi-trash" [rounded]="true" [text]="true" severity="danger" (click) ="openModalDelete(teacher)"  ></p-button></td>
@@ -123,6 +132,17 @@ dataKey="id"
                         (onChange)="onAdminCheckboxChange($event)">
                         </p-checkbox>
                         <label for="admin">Attribuer les droits administrateur</label>
+                    </div>
+                    <div class="flex align-items-center gap-3"  >
+                        <p-checkbox *ngIf="teacherUpdateForm && teacherUpdateForm.get('ttmanager')" 
+                        name="group1" 
+                        [binary]="true"
+                        value="true"
+                        inputId="ttmanager" 
+                        formControlName="ttmanager" 
+                        (onChange)="onTTManagerCheckboxChange($event)">
+                        </p-checkbox>
+                        <label for="ttmanager">Est un responsable de l'emploi du temps</label>
                     </div>
                     <div class="field">
                     </div>
