--- a/src/app/admin/components/form/add-teachers/add-teachers.component.html
+++ b/src/app/admin/components/form/add-teachers/add-teachers.component.html
@@ -46,6 +46,13 @@
             <div class="field">
                 
             </div>  
+            <div class="flex align-items-center gap-3">
+                <p-checkbox name="group1" value="true"  inputId="ttmanager" formControlName="ttmanager"></p-checkbox>
+                <label for="ttmanager">Est un responsable de l'emploi du temps</label>
+            </div>
+            <div class="field">
+                
+            </div>  
         </div>
         <button type="submit" pButton pRipple label="Ajouter un enseignant" class="w-full p-3" ></button>
         <div class="card p-fluid">
