--- a/src/app/admin/components/form/add-teachers/add-teachers.component.html
+++ b/src/app/admin/components/form/add-teachers/add-teachers.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <p-button routerLink="/admin/users" [rounded]="true" [text]="true" severity="secondary " icon="pi pi-arrow-left"></p-button>
 
 <!-- add-user.component.html -->
