--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -157,7 +157,7 @@
       <div class="mt-auto">
         <hr class="mb-3 mx-3 border-top-1 border-none surface-border" />
         <ul class="list-none p-2 m-0 hidden origin-bottom animation-duration-150 overflow-hidden animation-ease-in-out">
-          <li>
+          <li routerLink="/settings">
             <a pRipple
               class="flex align-items-center cursor-pointer p-3 hover:surface-100 border-round text-700 transition-duration-150 transition-colors">
               <i class="pi pi-cog mr-2"></i>
