mise a jour de la modification d'une ressource

--- a/src/app/admin/components/ressource-list/ressource-list.component.html
+++ b/src/app/admin/components/ressource-list/ressource-list.component.html
@@ -138,6 +138,15 @@
               label="Sauvegarder"
               (click)="confirmChanges(ressource)"
             ></button>
+            <button
+              *ngIf="ressource.is_editing"
+              pButton
+              pRipple
+              type="button"
+              label="Annuler"
+              class="p-button-secondary"
+              (click)="cancelEdit(ressource)"
+            ></button>
           </td>
         </tr>
       </ng-template>
