mise a jour du taining name en local après la modif

--- a/src/app/admin/components/ressource-list/ressource-list.component.html
+++ b/src/app/admin/components/ressource-list/ressource-list.component.html
@@ -3,6 +3,7 @@
   <app-create-ressource
     *ngIf="displayCreateRessources"
     [displayCreateRessourceDialog]="displayCreateRessources"
+    [trainings]="trainings"
     (ressourceCreated)="onRessourceCreated($event)"
   ></app-create-ressource>
   <div
