--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -194,7 +194,7 @@
                     >
                   </a>
                 </li>
-                <li>
+                <li routerLink="/admin/degrees">
                   <a
                     pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
